# CGFS

./: CMakeLists.txt  README.md  conanfile.py
include/CGFS/: Camera.hpp  Canvas.hpp  Color.hpp  Common.hpp  Logger.hpp  Scene.hpp  Viewport.hpp
include/CGFS/Lighting/: Light.hpp
include/CGFS/Material/: Material.hpp
include/CGFS/Objects/: Object.hpp  Sphere.hpp
source/sample/: main.cpp
test/: CMakeLists.txt  unit_test_cpp_template.cpp
test/compile_tests/tests/: typo.cpp
test_package/src/: example.cpp
